--- a/src/components/auth/Registration.module.css
+++ b/src/components/auth/Registration.module.css
@@ -1,11 +1,20 @@
 .registration {
   margin: 3rem 2rem;
 }
+.registration form {
+  margin-top: 2rem;
+}
+
+.form-group {
+  margin-top: 0.5rem;
+}
 
 .form-group label {
   display: inline-block;
   width: 12rem;
   height: 2rem;
+  text-align: right;
+  margin-right: 0.8rem;
 }
 
 .validation-text {
