--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,3 +3,12 @@
   background-color: #111;
   color: white;
 }
+
+.footer__box1 {
+  margin: 1.4rem 1rem;
+}
+
+.footer__box1 li {
+  list-style: none;
+  margin-top: 0.6rem;
+}
