--- a/src/components/products/Product.module.css
+++ b/src/components/products/Product.module.css
@@ -1,5 +1,6 @@
 .product {
   display: flex;
+  /* margin: 3rem 2rem; */
 }
 
 .product__img {
@@ -8,5 +9,25 @@
 }
 
 .product__description {
-  margin: 2rem;
+  margin: 3rem 2rem;
+  width: 40%;
+}
+
+.product__description--name {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.product__description--description {
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.product__description--price {
+  font: 1.5rem;
+  margin-top: 1rem;
+}
+
+.product__description--button {
+  margin-top: 1rem;
 }
